2008-10-04  kitone  <kitone@gna.org>

	* src/FileReader.cc:
	Fix: default newline value.

2008-10-04  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/SubtitleFormatSystem.cc:
	* src/formats/AdobeEncoreDVD.h:
	* src/formats/AdvancedSubStationAlpha.h:
	* src/formats/MPL2.h:
	* src/formats/MPsub.h:
	* src/formats/MicroDVD.h:
	* src/formats/SubRip.h:
	* src/formats/SubStationAlpha.h:
	* src/formats/SubViewer2.h:
	* src/formats/SubtitleEditorProject.h:
	* src/formats/TimedText.h:
	New files. Append formats.

2008-10-04  kitone  <kitone@gna.org>

	* src/gui/ComboBoxNewLine.cc:
	Add "Macintosh" newline.

2008-10-04  kitone  <kitone@gna.org>

	* src/Document.cc:
	* src/gui/ComboBoxSubtitleFormat.cc:
	* src/gui/DialogFileChooser.cc:
	Restore with SubtitleFormatSystem.

2008-10-04  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/SubtitleFormat.cc:
	* src/SubtitleFormat.h:
	* src/SubtitleFormatFactory.h:
	* src/SubtitleFormatSystem.cc:
	* src/SubtitleFormatSystem.h:
	New files.
	New Subtitle Format System.

2008-10-04  kitone  <kitone@gna.org>

	* src/ScriptInfo.cc:
	* src/ScriptInfo.h:
	Remove values for std::map<Glib::ustring, Glib::ustring>.

2008-10-04  kitone  <kitone@gna.org>

	* src/actions/Transcript.cc:
	Restore Import/Export with the support of FileReader/Writer.

2008-10-04  kitone  <kitone@gna.org>

	* src/Options.cc:
	* src/Options.h:
	* src/debug.h:
	* src/main.cc:
	Remove SE_DEBUG_LOADER and SE_DEBUG_SAVER.
	Add SE_DEBUG_IO. (Input Output)

2008-10-04  kitone  <kitone@gna.org>

	* src/FileReader.cc:
	* src/FileReader.h:
	* src/FileWriter.cc:
	* src/FileWriter.h:
	* src/Makefile.am:
	Help to Read or write file.
	New files. 

2008-10-04  kitone  <kitone@gna.org>

	* src/Document.cc:
	* src/actions/Transcript.cc:
	* src/gui/ComboBoxSubtitleFormat.cc:
	* src/gui/DialogFileChooser.cc:
	Remove SubtitleSystem code. (SE is broken)

	* src/Makefile.am:
	Update with files removed.

	* src/SubtitleFormat.cc:
	* src/SubtitleFormat.h:
	* src/SubtitleSystem.cc: